kubernetes/apps/database/dragonfly/cluster/dragonfly.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dragonfly-internal
  labels:
    lbipam.monosense.io/class: internal
    bgp.monosense.io/advertise: "true"
  annotations:
    lbipam.cilium.io/ips: 10.25.20.41
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  loadBalancerSourceRanges:
    - 10.25.10.101/32
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: dragonfly
    dragonfly.dragonflydb.io/name: dragonfly
    dragonfly.dragonflydb.io/role: master
  ports:
    - name: dragonfly-tls
      port: 6379
      targetPort: 6379
      protocol: TCP
